# java-spring-docker

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.generated  POSITIONING.md  README.md  ROADMAP.md  SECURITY.md  build.gradle  images_comparision.txt  musthave_modules.txt  pom.xml  pyproject.toml  verify-delivery.sh
.github/: release-drafter.yml  release-template.md  renovate.json
.github/workflows/: ci.yml  release-drafter.yml  release-please.yml  release.yml
benchmarks/: README.md  setup_benchmark_folders.py
benchmarks/01-base-image-pinning/: README.md
benchmarks/02-multi-stage-build-structure/: README.md
benchmarks/03-buildkit-gradle-cache/: README.md
benchmarks/04-custom-jre-jlink/: README.md
benchmarks/05-jep483-aot-cache/: QUICKSTART.md  README.md  analyze_aot_cache.py
benchmarks/06-runtime-hardening-non-root-tmp/: README.md
benchmarks/07-healthcheck-readiness/: README.md
benchmarks/08-jvm-container-flags/: README.md
benchmarks/09-base-image-choice/: README.md
cli/: README.md
docs/: architecture.md  benchmark-comparison.md  benchmark-dashboard.md  benchmark-methodology.md  compatibility-matrix.md  distribution.md  example-gallery.md  extensions.md  golden-samples.md  index.html  jvm-optimization.md  kubernetes.md  multiarch.md  native-image-roadmap.md  observability.md  onboarding.md  security-hardening.md  troubleshooting.md
examples/: README.md
k8s/: deployment.yaml
tests/: test_analyze.py  test_cli_parse.py  test_commands_analyze.py  test_commands_compare.py  test_commands_explain.py  test_commands_inspect.py  test_compare.py  test_config.py  test_dockerfile_snapshots.py  test_init.py  test_integration_cli_flows.py  test_internal_flows.py  test_project_detect.py  test_regression.py  test_support.py
tools/: README.md  dockerfile_wizard.py
(+217 files in other folders)
