[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "springdocker-cli"
version = "0.1.0"
description = "CLI for Spring Boot Dockerfile and benchmark workflows (Maven/Gradle)."
readme = "cli/README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0; python_version < '3.11'"
]
authors = [
  { name = "springdocker contributors" }
]
license = { text = "UNLICENSED" }

[project.scripts]
springdocker = "springdocker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

