[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "springdocker"
version = "1.0.1"
description = "CLI for Spring Boot Dockerfile and benchmark workflows (Maven/Gradle)."
readme = "cli/README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0; python_version < '3.11'"
]
optional-dependencies = { dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6.0", "mypy>=1.10"] }
authors = [
  { name = "springdocker contributors" }
]
license = { text = "UNLICENSED" }

[project.scripts]
springdocker = "springdocker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-q --cov=springdocker --cov-report=term-missing --cov-fail-under=75"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
